--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 # Project exclude paths
-/elasticsearch/target/
-/postgresql/target/
+/out/
+
+.idea/
+*.iml
+target/
+logs/
+javadocs/
+
+.DS_Store
+generated/
+classes/
